# project-manage-university-hcmus-2025

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  README.md  error.md  s2.md
config/: app_config.ini
data/: courses.csv  faculties.csv  logins.csv  students.csv  teachers.csv
docs/: CODING_STYLE.md  ProposalOOP.md  Report.md  UML.md
src/: main.cpp
src/common/: AppConfig.h  DataSourceType.h  EntityType.h  ErrorType.h  LoginStatus.cpp  LoginStatus.h  OperationResult.h  UserRole.h  ValidationResult.cpp  ValidationResult.h
src/config/: app_config.ini
src/core/data_access/: DaoFactory.cpp  DaoFactory.h
src/core/data_access/interface/: ICourseDao.h  ICourseResultDao.h  IDao.h  IEnrollmentDao.h  IFacultyDao.h  IFeeRecordDao.h  ILoginDao.h  ISalaryRecordDao.h  IStudentDao.h  ITeacherDao.h
src/core/data_access/mock/: MockCourseDao.cpp  MockCourseDao.h  MockCourseResultDao.cpp  MockCourseResultDao.h  MockEnrollmentDao.cpp  MockEnrollmentDao.h  MockFacultyDao.cpp  MockFacultyDao.h  MockFeeRecord.cpp  MockFeeRecordDao.cpp  MockFeeRecordDao.h  MockLoginDao.cpp  MockLoginDao.h  MockSalaryRecordDao.cpp  MockSalaryRecordDao.h  MockStudentDao.cpp  MockStudentDao.h  MockTeacherDao.cpp  MockTeacherDao.h
src/core/data_access/sql/: SqlCourseDao.cpp  SqlCourseDao.h  SqlCourseResultDao.cpp  SqlCourseResultDao.h  SqlEnrollmentDao.cpp  SqlEnrollmentDao.h  SqlFacultyDao.cpp  SqlFacultyDao.h  SqlFeeRecordDao.cpp  SqlFeeRecordDao.h  SqlLoginDao.cpp  SqlLoginDao.h  SqlSalaryRecordDao.cpp  SqlSalaryRecordDao.h  SqlStudentDao.cpp  SqlStudentDao.h  SqlTeacherDao.cpp  SqlTeacherDao.h
src/core/database_adapter/interface/: IDatabaseAdapter.h
src/core/database_adapter/sql/: SQLiteAdapter.cpp  SQLiteAdapter.h  SQLiteConnector.cpp  SQLiteConnector.h
src/core/entities/: AdminUser.cpp  AdminUser.h  Birthday.cpp  Birthday.h  Course.cpp  Course.h  CourseResult.cpp  CourseResult.h  Department.h  Faculty.cpp  Faculty.h  FeeRecord.cpp  FeeRecord.h  IEntity.h  Result.cpp  Result.h  SalaryRecord.cpp  SalaryRecord.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  User.cpp  User.h
src/core/parsing/impl_sql_parser/: CourseResultSqlParser.cpp  CourseResultSqlParser.h  CourseSqlParser.cpp  CourseSqlParser.h  EnrollmentRecordSqlParser.cpp  EnrollmentRecordSqlParser.h  FacultySqlParser.cpp  FacultySqlParser.h  FeeRecordSqlParser.cpp  FeeRecordSqlParser.h  LoginCredentialsSqlParser.cpp  LoginCredentialsSqlParser.h  SalaryRecordSqlParser.cpp  SalaryRecordSqlParser.h  SqlParserUtils.cpp  SqlParserUtils.h  SqlStudentParser.cpp  StudentSqlParser.cpp  StudentSqlParser.h  TeacherSqlParser.cpp  TeacherSqlParser.h
src/core/parsing/interface/: IEntityParser.h
src/core/repo/csv/: CsvCourseRepo.cpp  CsvCourseRepo.h  CsvEnrollmentRepo.cpp  CsvEnrollmentRepo.h  CsvFacultyRepo.cpp  CsvFacultyRepo.h  CsvFeeRepo.cpp  CsvFeeRepo.h  CsvLoginRepo.cpp  CsvLoginRepo.h  CsvResultRepo.cpp  CsvResultRepo.h  CsvSalaryRepo.cpp  CsvSalaryRepo.h  CsvStudentRepo.cpp  CsvStudentRepo.h  CsvTeacherRepo.cpp  CsvTeacherRepo.h
src/core/repo/interface/: ICourseRepository.h  IDepartmentRepository.h  IEnrollmentRepository.h  IFacultyRepository.h  IFeeRepository.h  ILoginRepository.h  IRepository.h  IResultRepository.h  ISalaryRepository.h  IStudentRepository.h  ITeacherRepository.h  IUserRepository.h
src/core/repo/mock/: MockStudentRepo.h
src/core/repository/: DaoFactory.h
src/core/repository/csv/: CsvAbstractDao.h
src/core/repository/interface/: ICourseDao.h  ICourseResultDao.h  IDao.h  IEnrollmentDao.h  IFacultyDao.h  IFeeRecordDao.h  ILoginDao.h  ISalaryRecordDao.h  IStudentDao.h  ITeacherDao.h
src/core/repository/mock/: MockStudentDao.h
src/core/services/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  CourseService.cpp  CourseService.h  EnrollmentService.cpp  EnrollmentService.h  FacultyService.cpp  FacultyService.h  FinanceService.cpp  FinanceService.h  ResultService.cpp  ResultService.h  SessionContext.cpp  SessionContext.h  StudentService.cpp  StudentService.h  TeacherService.cpp  TeacherService.h
src/core/services/impl/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  CourseService.cpp  CourseService.h  EnrollmentService.cpp  EnrollmentService.h  FacultyService.cpp  FacultyService.h  FinanceService.cpp  FinanceService.h  ResultService.cpp  ResultService.h  StudentService.cpp  StudentService.h  TeacherService.cpp  TeacherService.h
src/core/services/interface/: IAdminService.h  IAuthService.h  ICourseService.h  IEnrollmentService.h  IFacultyService.h  IFinanceService.h  IResultService.h  IStudentService.h  ITeacherService.h
src/core/validators/impl/: CourseValidator.cpp  CourseValidator.h  GeneralInputValidator.cpp  GeneralInputValidator.h  StudentValidator.cpp  StudentValidator.h  TeacherValidator.cpp  TeacherValidator.h
src/core/validators/interface/: IValidator.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h  MenuOption.h
src/ui/view_helpers/: InputPrompter.cpp  InputPrompter.h  MenuRenderer.cpp  MenuRenderer.h  TableDisplayer.cpp  TableDisplayer.h
src/utils/: ConfigLoader.cpp  ConfigLoader.h  ConsoleUtils.cpp  ConsoleUtils.h  CsvFileHandler.h  FileHandler.cpp  FileHandler.h  IFileHandler.h  Logger.cpp  Logger.h  PasswordInput.cpp  PasswordInput.h  StringUtils.cpp  StringUtils.h
tests/common/: AppConfig_test.cpp  DataSourceType_test.cpp  EntityType_test.cpp  ErrorType_test.cpp  LoginStatus_test.cpp  UserRole_test.cpp  ValidationResult_test.cpp
tests/core/data_access/: DaoFactory_test.cpp
tests/core/data_access/mock/: MockCourseDao_test.cpp  MockCourseResultDao_test.cpp  (+7 more)
tests/core/entities/: AdminUser_test.cpp  Birthday_test.cpp  CourseResult_test.cpp  Course_test.cpp  Faculty_test.cpp  FeeRecord_test.cpp  SalaryRecord_test.cpp  Student_test.cpp  Teacher_test.cpp  User_test.cpp
tests/core/services/: SessionContext_test.cpp
tests/ui/: MenuOption_test.cpp
tests/ui/view_helpers/: InputPrompter_test.cpp  MenuRenderer_test.cpp  TableDisplayer_test.cpp
tests/utils/: ConfigLoader_test.cpp  ConsoleUtils_test.cpp  Logger_test.cpp  PasswordInput_test.cpp  StringUtils_test.cpp
(+25 files in other folders)
